// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<tr
  data-id="Foo"
>
  <td
    className="width-20"
  >
    <strong
      className="js-group-name"
    >
      Foo
    </strong>
  </td>
  <td
    className="thin text-middle text-right little-padded-right"
  >
    1
  </td>
  <td
    className="little-padded-left"
  >
    <EditMembers
      group={
        {
          "id": 1,
          "membersCount": 1,
          "name": "Foo",
        }
      }
      onEdit={[MockFunction]}
    />
  </td>
  <td
    className="width-40"
  >
    <span
      className="js-group-description"
    />
  </td>
  <td
    className="thin nowrap text-right"
  >
    <ActionsDropdown>
      <ActionsDropdownItem
        className="js-group-update"
        onClick={[Function]}
      >
        update_details
      </ActionsDropdownItem>
      <ActionsDropdownDivider />
      <ActionsDropdownItem
        className="js-group-delete"
        destructive={true}
        onClick={[Function]}
      >
        delete
      </ActionsDropdownItem>
    </ActionsDropdown>
  </td>
</tr>
`;

exports[`should render correctly: default group 1`] = `
<tr
  data-id="Foo"
>
  <td
    className="width-20"
  >
    <strong
      className="js-group-name"
    >
      Foo
    </strong>
    <span
      className="little-spacer-left"
    >
      (
      default
      )
    </span>
  </td>
  <td
    className="thin text-middle text-right little-padded-right"
  >
    1
  </td>
  <td
    className="little-padded-left"
  />
  <td
    className="width-40"
  >
    <span
      className="js-group-description"
    />
  </td>
  <td
    className="thin nowrap text-right"
  />
</tr>
`;
